tests/ui/type/issue-91268.rs
// ignore-tidy-trailing-newlines
// `ţ` must be the last character in this file, it cannot be followed by a newline

//~vv ERROR this file contains an unclosed delimiter
fn main() {
    0: u8(ţ